# pf-db

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_rates_schema.py  0002_payroll_schema.py
db/: 01_schema.sql  02_seed_base.sql  03_seed_test.sql  04_seed_real.sql
